# rust-sdk

./: Cargo.toml
crates/rmcp/: Cargo.toml
crates/rmcp-core/: Cargo.toml
crates/rmcp-core/src/: lib.rs  service_traits.rs
crates/rmcp/src/: lib.rs  service.rs
crates/rmcp/tests/: test_tool_macros.rs
