[package]
name = "rmcp-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
futures-core = { version = "0.3", optional = true } # Optional for async traits if needed

[features]
default = []
async_traits = ["dep:futures-core"] 